Added new svg icons and swaped video tag for img tag

--- a/src/components/Confirmation/Confirmation.astro
+++ b/src/components/Confirmation/Confirmation.astro
@@ -9,7 +9,7 @@ import './confirmation.css'
 <section class="confirmation container">
 	<ConfirmationForm client:only="react"/>
 	<section class="confirmation_image">
-		<video class="confirmation_gif" src="/videos/wedding-date.mp4" poster="/icons/wedding-date.gif" autoplay loop muted playsinline preload="auto"></video>
+		<img class="confirmation_gif" src="/icons/wedding-date.svg"></img>
 	</section>
 	<section class="confirmation_information">
 		<p class="small">La confirmación se enviará por WhatsApp a la organizadora del evento: Keren Rivera.</p>
