--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -15,7 +15,7 @@ import './hero.css'
 			<p class="save_the_date">2025</p>
 		</section>
 		<picture class="hero_image">
-			<video class="hero_image__front" src="/videos/ring.mp4" poster="/icons/ring.gif" autoplay loop muted playsinline preload="auto"></video>
+			<img class="hero_image__front" src="/icons/ring.svg"></i>
 		</picture>
 		<Timer client:only="react" />
 	</section>
