--- a/src/components/Story/Story.astro
+++ b/src/components/Story/Story.astro
@@ -8,7 +8,7 @@ import './story.css'
 	<article class="story_cards">
 		<section class="card">
 			<picture>
-				<video class="story_gif" src="/videos/tudor.mp4" poster="/icons/tudor.gif" autoplay loop muted playsinline preload="auto"></video>
+				<img class="story_gif" src="/icons/tudor.svg"></img>
 			</picture>
 			<h3>Nuestro noviazgo</h3>
 			<p>Nos conocimos en el 2014 en una clase de fotografía de la universidad, unos años después, en el 2019, comenzamos nuestra relación.</p>
@@ -16,7 +16,7 @@ import './story.css'
 
 		<section class="card">
 			<picture>
-				<video class="story_gif" src="/videos/ring-hand.mp4" poster="/icons/ring-hand.gif" autoplay loop muted playsinline preload="auto"></video>
+				<img class="story_gif" src="/icons/ring-hand.svg"></img>
 			</picture>
 			<h3>Nuestro compromiso</h3>
 			<p>En el 2022 decidimos dar el siguiente paso, y durante un viaje por los paisajes y cascadas de Chiapas nos comprometimos. </p>
@@ -24,7 +24,7 @@ import './story.css'
 
 		<section class="card">
 			<picture>
-				<video class="story_gif" src="/videos/marriage.mp4" poster="/icons/marriage.gif" autoplay loop muted playsinline preload="auto"></video>
+				<img class="story_gif" src="/icons/marriage.svg"></img>
 			</picture>
 			<h3>Nuestra boda</h3>
 			<p>Y ahora el 19 de Noviembre del 2023 con la bendición de nuestros padres, nos daremos el Sí definitivo. Nos encantaría que formes parte de este momento que seguirá escribiendo nuestra historia.</p>
