--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import './_reset.css'
 import './_index.css'
+import './_default.css'
 
 import { GoogleFontsOptimizer } from "astro-google-fonts-optimizer";
 import Hero from '../components/Hero/Hero.astro';
