Fixed content and styles

--- a/src/components/Confirmation/Confirmation.astro
+++ b/src/components/Confirmation/Confirmation.astro
@@ -11,7 +11,6 @@ import './confirmation.css'
 	<section class="confirmation_image">
 		<img class="confirmation_gif" src="/icons/wedding-date.svg"></img>
 	</section>
-	<section class="confirmation_information">
-		<p class="small">La confirmación se enviará por WhatsApp a la organizadora del evento: Keren Rivera.</p>
+		<p class="small">La confirmación se enviará por WhatsApp a la coordinadora: Lourdes Loo.</p>
 	</section>
 </section>
