--- a/src/components/GiftList/GiftList.astro
+++ b/src/components/GiftList/GiftList.astro
@@ -14,4 +14,33 @@ import './giftlist.css'
 		<a class="button" href="https://mesaderegalos.liverpool.com.mx/" target="_blank">Ver mesa de regalos</a>
 	</section>
 	
+	<section class="giftlist_cardTransfer">
+		<section class="giftlist_cardTransfer__information">
+			<h3>Apoyo en efectivo</h3>
+			<p>Si lo prefieres, puedes darnos un apoyo en efectivo haciendo una transferencia a nuestra cuenta.</p>
+			<p>Pon tu nombre el asunto para saber que el regalo viene de tu parte.</p>
+		</section>
+		<table class="table table_caissa">
+			<thead>
+				<tr>
+					<th>Nombre</th>
+					<th>Oyuky & Daniel</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Banco</td>
+					<td>Santander</td>
+				</tr>
+				<tr>
+					<td>Cuenta CLABE</td>
+					<td>014813606049539245</td>
+				</tr>
+				<tr>
+					<td>Número de tarjeta</td>
+					<td>5579 0701 0429 4510</td>
+				</tr>
+			</tbody>
+		</table>
+	</section>
 </section>
