--- a/src/components/Horarios/Horarios.astro
+++ b/src/components/Horarios/Horarios.astro
@@ -8,13 +8,13 @@ import './horarios.css'
 	
 	<article class="horarios_cards">
 		<section class="card">
-			<h3>Ceremonia Civil</h3>
-			<p>5:30pm</p>
+			<h3>Ceremonia Civil - Playa</h3>
+			<p>5:00pm</p>
 		</section>
 
 		<section class="card">
-			<h3>Recepción</h3>
-			<p>6:30pm</p>
+			<h3>Recepción - Finca</h3>
+			<p>7:30pm</p>
 		</section>
 	</article>
 </section>
