--- a/src/components/Reception/Reception.astro
+++ b/src/components/Reception/Reception.astro
@@ -6,10 +6,13 @@ import './reception.css'
 <HeadingTitles heading="Recepción" />
 <section class="reception container">
 	<address class="reception_address">
+		<h3>Playa</h3>
+		<p>Ubicación Pendiente</p>
+		<p>Mazatlán, Sinaloa, MX</p>
+		<br />
 		<h3>Finca Buenos Aires</h3>
 		<p>Cedros 19206, Fraccionamiento Pradera Dorada, CP 82136</p>
 		<p>Mazatlán, Sinaloa, MX</p>
-		<!-- <p class="small">El lugar es en salón interior y cuenta con aire acondicionado. Cuenta también con estacionamiento disponible para nuestros invitados. </p> -->
 	</address>
 	<section class="reception_map">
 		<iframe src="https://www.google.com/maps/d/embed?mid=1zyiDVdwWATuSM5wU5sgX6gBsk9nkF18&ehbc=2E312F" width="100%" height="480"></iframe>
@@ -18,9 +21,5 @@ import './reception.css'
 		<h3>Regla de etiqueta:</h3>
 		<p>Mujeres: Vestido largo. Prohibido vestir color rojo, blanco, negro y plata; eviten negar acceso.</p>
 		<p>Hombres: Vestimenta Formal.</p>
-	</section>
-	<section class="dressing_code">
-		<h3>Cordinadora</h3>
-		<p>Lourdes Loo</p>
 	</section>
 </section>
