--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -7,13 +7,20 @@
 	margin-top: 0;
 	object-position: 50% 30%;
 	background-color: var(--main-color);
-	filter: blur(1px) brightness(80%);
+	grid-column: 1 / 1;
+	grid-row: 1 / 1;
 }
 
 .hero_picture {
 	position: relative;
-	height: 50dvh;
 	display: grid;
+	grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+
+	& svg {
+		grid-column: 1 / 1;
+		grid-row: 1 / 1;
+	}
 }
 
 .hero_picture h1 {
@@ -25,9 +32,16 @@
 	margin: 0;
 }
 
+@media screen and (min-width: 699px) {
+	svg {
+		height: 200px;
+		margin: 0 auto;
+	}
+}
+
 @media screen and (max-width: 700px) {
 	.feature_image {
-		object-position: 50% 50%;
+		height: 30dvh;
 	}
 	.hero_picture h1 {
 		margin-top: 4rem;
@@ -39,7 +53,8 @@
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(2, auto);
-	grid-template-areas: 'TEXT GIF'
+	grid-template-areas: 'HEADING HEADING'
+						 'TEXT GIF'
 						 'TIMER TIMER';
 	justify-content: center;
 	align-items: center;
@@ -72,7 +87,7 @@
 
 .hero_image {
 	grid-area: GIF;
-	height: 40dvh;
+	height: 30dvh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -81,7 +96,6 @@
 
 .hero_date_timer {
 	grid-area: TIMER;
-	height: 10dvh;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
@@ -115,15 +129,23 @@
 	}
 }
 
+.hero_date_heading {
+	grid-area: HEADING;
+	text-align: center;
+    margin-top: 1rem;
+}
+
 @media screen and (max-width: 700px) {
 	.hero_date {
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
 		grid-template-rows: repeat(3, auto);
 		grid-template-areas: 'GIF'
+							 'HEADING'
 							 'TEXT'
 							 'TIMER';
 		gap: 0.4rem;
+		height: 70dvh;
 	}
 
 	.hero_image__front, .hero_image__back {
@@ -140,8 +162,5 @@
 	}
 	.hero_date_text {
 		height: 10dvh;
-	}
-	.hero_date_timer {
-		height: 20dvh;
 	}
 }
