--- a/src/pages/_index.css
+++ b/src/pages/_index.css
@@ -26,7 +26,7 @@ body, html {
 }
 
 h1 {
-	font-family: 'Great Vibes', 'Times New Roman', Times, serif;
+	font-family: 'Parisienne', 'Times New Roman', Times, serif;
 	font-size: 3.8rem;
 	text-align: center;
 }
