--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import Gallery from '../components/Gallery/Gallery.astro';
 import Footer from '../components/Footer/Footer.astro';
 import Confirmation from '../components/Confirmation/Confirmation.astro';
 import GiftList from '../components/GiftList/GiftList.astro';
+import Music from '../components/Music/Music.astro';
 ---
 
 <html lang="es">
@@ -31,7 +32,7 @@ import GiftList from '../components/GiftList/GiftList.astro';
 		<meta property="og:image" content="images/hero.jpeg" />
 		<meta property="og:image:alt" content="Oyuky y Daniel tomados de la mano frente al atardecer" />
 
-		<GoogleFontsOptimizer url="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap">
+		<GoogleFontsOptimizer url="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Parisienne&display=swap">
     	</GoogleFontsOptimizer>
 		<script src="https://t.usermaven.com/lib.js" 
 			data-key="UMLxqQaxkR" 
@@ -46,6 +47,7 @@ import GiftList from '../components/GiftList/GiftList.astro';
 		<main>
 			<Hero />
 
+			<Music />
 			<Reception />
 			<Horarios />
 			<Story />
